Preparing to move for-loop checks into semantic/

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -246,6 +246,7 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/semantic/semantic.c"
     "src/semantic/expand_constant_declarations.c"
     "src/semantic/loop_exit.c"
+    "src/semantic/loop_for.c"
     "src/semantic/resolve_cmd_overloads.c"
     "src/semantic/type_check.c"
     "src/semantic/type_check_assignment.c"
@@ -496,6 +497,8 @@ if (ODBCOMPILER_TESTS)
         "tests/src/semantic/loop_exit_errors.cpp"
         "tests/src/semantic/loop_exit_for.cpp"
         "tests/src/semantic/loop_exit_for_errors.cpp"
+        "tests/src/semantic/loop_for_warnings.cpp"
+        "tests/src/semantic/loop_for_errors.cpp"
         "tests/src/semantic/type_check_assignment.cpp"
         "tests/src/semantic/type_check_assignment_warnings.cpp"
         "tests/src/semantic/type_check_assignment_errors.cpp"
