Basic for-loops now compile and run

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -192,9 +192,11 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "include/odb-compiler/ast/ast.h"
     "include/odb-compiler/ast/ast_ops.h"
     "include/odb-compiler/ast/ast_export.h"
+    "include/odb-compiler/ast/ast_integrity.h"
     "src/ast/ast.c"
     "src/ast/ast_ops.c"
     "src/ast/ast_export.c"
+    "src/ast/ast_integrity.c"
     #"src/ast/Annotation.cpp"
     #"src/ast/ArgList.cpp"
     #"src/ast/ArrayDecl.cpp"
@@ -253,6 +255,7 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/semantic/type_check_binop_symmetric.c"
     "src/semantic/type_check_binop_pow.c"
     "src/semantic/type_check_casts.c"
+    "src/semantic/unary_literal.c"
     #"src/astpost/EliminateBitwiseNotRHS.cpp"
     #"src/astpost/EliminateBitwiseNotRHS.cpp"
     #"src/astpost/EnforceSingleDefaultCase.cpp"
@@ -480,13 +483,11 @@ if (ODBCOMPILER_TESTS)
 
         "tests/src/parser/boolean_literal.cpp"
         "tests/src/parser/integer_literal.cpp"
-        "tests/src/parser/negative_integer_literal.cpp"
         "tests/src/parser/conditionals.cpp"
         "tests/src/parser/conditionals_errors.cpp"
         "tests/src/parser/command.cpp"
         "tests/src/parser/command_matcher.cpp"
         "tests/src/parser/loop_for.cpp"
-        "tests/src/parser/loop_for_warnings.cpp"
         "tests/src/parser/loop_for_errors.cpp"
         "tests/src/parser/remarks.cpp"
         "tests/src/parser/remarks_errors.cpp"
@@ -500,6 +501,7 @@ if (ODBCOMPILER_TESTS)
         "tests/src/semantic/loop_for.cpp"
         "tests/src/semantic/loop_for_warnings.cpp"
         "tests/src/semantic/loop_for_errors.cpp"
+        "tests/src/semantic/negative_integer_literal.cpp"
         "tests/src/semantic/type_check_assignment.cpp"
         "tests/src/semantic/type_check_assignment_warnings.cpp"
         "tests/src/semantic/type_check_assignment_errors.cpp"
