exit on named loops works

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -249,6 +249,7 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/semantic/expand_constant_declarations.c"
     "src/semantic/loop_exit.c"
     "src/semantic/loop_for.c"
+    "src/semantic/loop_name.c"
     "src/semantic/resolve_cmd_overloads.c"
     "src/semantic/type_check.c"
     "src/semantic/type_check_assignment.c"
@@ -501,10 +502,14 @@ if (ODBCOMPILER_TESTS)
         "tests/src/semantic/loop_for.cpp"
         "tests/src/semantic/loop_for_warnings.cpp"
         "tests/src/semantic/loop_for_errors.cpp"
+        "tests/src/semantic/loop_name_errors.cpp"
         "tests/src/semantic/negative_integer_literal.cpp"
         "tests/src/semantic/type_check_assignment.cpp"
         "tests/src/semantic/type_check_assignment_warnings.cpp"
         "tests/src/semantic/type_check_assignment_errors.cpp"
+        "tests/src/semantic/type_check_binop_boolean.cpp"
+        "tests/src/semantic/type_check_binop_boolean_warnings.cpp"
+        "tests/src/semantic/type_check_binop_boolean_errors.cpp"
         "tests/src/semantic/type_check_binop_pow.cpp"
         "tests/src/semantic/type_check_binop_pow_warnings.cpp"
         "tests/src/semantic/type_check_binop_pow_errors.cpp"
