Working on functions

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -488,6 +488,7 @@ if (ODBCOMPILER_TESTS)
         "tests/src/parser/conditionals_errors.cpp"
         "tests/src/parser/command.cpp"
         "tests/src/parser/command_matcher.cpp"
+        "tests/src/parser/func.cpp"
         "tests/src/parser/loop_for.cpp"
         "tests/src/parser/loop_for_errors.cpp"
         "tests/src/parser/remarks.cpp"
@@ -517,6 +518,8 @@ if (ODBCOMPILER_TESTS)
         "tests/src/semantic/type_check_binop_pow.cpp"
         "tests/src/semantic/type_check_binop_pow_warnings.cpp"
         "tests/src/semantic/type_check_binop_pow_errors.cpp"
+        "tests/src/semantic/type_check_func.cpp"
+        "tests/src/semantic/type_check_func_warnings.cpp"
         "tests/src/semantic/type_check_loop_for.cpp"
         "tests/src/semantic/type_check_loop_cont.cpp"
         "tests/src/semantic/resolve_cmd_overloads.cpp"
