Working on function table

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -180,11 +180,13 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "include/odb-compiler/parser/db_keyword.h"
     "include/odb-compiler/parser/db_parser.h"
     "include/odb-compiler/parser/db_source.h"
+    "include/odb-compiler/parser/func_list.h"
     "src/parser/db_keyword.gperf"
     "src/parser/db_scanner.lex"
     "src/parser/db_parser.y"
     "src/parser/db_parser.c"
     "src/parser/db_source.c"
+    "src/parser/func_list.c"
     "${Gperf_db-keyword_OUTPUTS}"
     "${BISON_db-parser_OUTPUTS}"
     "${FLEX_db-scanner_OUTPUTS}"
@@ -197,52 +199,6 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/ast/ast_ops.c"
     "src/ast/ast_export.c"
     "src/ast/ast_integrity.c"
-    #"src/ast/Annotation.cpp"
-    #"src/ast/ArgList.cpp"
-    #"src/ast/ArrayDecl.cpp"
-    #"src/ast/ArrayUndim.cpp"
-    #"src/ast/ArrayRef.cpp"
-    #"src/ast/Assignment.cpp"
-    #"src/ast/BinaryOp.cpp"
-    #"src/ast/Block.cpp"
-    #"src/ast/CommandExpr.cpp"
-    #"src/ast/CommandStmnt.cpp"
-    #"src/ast/Conditional.cpp"
-    #"src/ast/ConstDecl.cpp"
-    #"src/ast/Exit.cpp"
-    #"src/ast/Exporters_DOT.cpp"
-    #"src/ast/Exporters_JSON.cpp"
-    #"src/ast/Expression.cpp"
-    #"src/ast/FuncArgList.cpp"
-    #"src/ast/FuncCall.cpp"
-    #"src/ast/FuncDecl.cpp"
-    #"src/ast/Goto.cpp"
-    #"src/ast/Identifier.cpp"
-    #"src/ast/ImplicitCast.cpp"
-    #"src/ast/InitializerList.cpp"
-    #"src/ast/Label.cpp"
-    #"src/ast/Literal.cpp"
-    #"src/ast/Loop.cpp"
-    #"src/ast/LValue.cpp"
-    #"src/ast/Node.cpp"
-    #"src/ast/Operator.cpp"
-    #"src/ast/ParentMap.cpp"
-    #"src/ast/Program.cpp"
-    #"src/ast/Scope.cpp"
-    #"src/ast/ScopedIdentifier.cpp"
-    #"src/ast/SelectCase.cpp"
-    #"src/ast/SourceLocation.cpp"
-    #"src/ast/Statement.cpp"
-    #"src/ast/Subroutine.cpp"
-    #"src/ast/Type.cpp"
-    #"src/ast/UDTDecl.cpp"
-    #"src/ast/UDTField.cpp"
-    #"src/ast/UnaryOp.cpp"
-    #"src/ast/VarDecl.cpp"
-    #"src/ast/Variable.cpp"
-    #"src/ast/VariableScope.cpp"
-    #"src/ast/VarRef.cpp"
-    #"src/ast/Visitor.cpp"
    
     "include/odb-compiler/semantic/semantic.h"
     "src/semantic/semantic.c"
