--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,12 +65,13 @@ if (ODB_TESTS)
 endif ()
 
 add_subdirectory ("thirdparty/gperf-3.1")
+add_subdirectory ("odb-resgen")
+add_subdirectory ("odb-cligen")
 add_subdirectory ("odb-sdk")
 add_subdirectory ("odb-compiler")
-add_subdirectory ("odb-cli")
-add_subdirectory ("odb-resgen")
-#add_subdirectory ("odb-runtime")
 add_subdirectory ("odb-plugins")
+add_subdirectory ("odb-cli")
+#add_subdirectory ("odb-runtime")
 if (ODB_EDITOR)
     #add_subdirectory ("odb-editor")
 endif ()
