func_table -> symbol_table

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -180,13 +180,11 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "include/odb-compiler/parser/db_keyword.h"
     "include/odb-compiler/parser/db_parser.h"
     "include/odb-compiler/parser/db_source.h"
-    "include/odb-compiler/parser/func_table.h"
     "src/parser/db_keyword.gperf"
     "src/parser/db_scanner.lex"
     "src/parser/db_parser.y"
     "src/parser/db_parser.c"
     "src/parser/db_source.c"
-    "src/parser/func_table.c"
     "${Gperf_db-keyword_OUTPUTS}"
     "${BISON_db-parser_OUTPUTS}"
     "${FLEX_db-scanner_OUTPUTS}"
@@ -201,13 +199,15 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/ast/ast_integrity.c"
    
     "include/odb-compiler/semantic/semantic.h"
-    "src/semantic/semantic.c"
+    "include/odb-compiler/semantic/symbol_table.h"
     "src/semantic/expand_constant_declarations.c"
     "src/semantic/loop_cont.c"
     "src/semantic/loop_exit.c"
     "src/semantic/loop_for.c"
     "src/semantic/loop_name.c"
     "src/semantic/resolve_cmd_overloads.c"
+    "src/semantic/semantic.c"
+    "src/semantic/symbol_table.c"
     "src/semantic/type_check.c"
     "src/semantic/type_check_binop_symmetric.c"
     "src/semantic/type_check_binop_pow.c"
