Fixed AST reallocation heap corruption

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,9 +81,13 @@ set (ODB_BUILD_LIBDIR "${ODB_BUILD_PREFIX}/${ODB_ARCH}/${ODB_PLATFORM}/lib")
 set (ODB_BUILD_SDKDIR "${ODB_BUILD_PREFIX}/${ODB_ARCH}/${ODB_PLATFORM}/odb-sdk")
 set (DBP_BUILD_SDKDIR "${ODB_BUILD_PREFIX}/${ODB_ARCH}/${ODB_PLATFORM}/dbp-sdk")
 
+set (ODB_BUILD_HOST_BINDIR "${ODB_BUILD_PREFIX}/hosttools/bin")
+
 set (ODB_INSTALL_BINDIR "${ODB_ARCH}/${ODB_PLATFORM}/bin")
 set (ODB_INSTALL_LIBDIR "${ODB_ARCH}/${ODB_PLATFORM}/lib")
 set (ODB_INSTALL_INCLUDEDIR "${ODB_ARCH}/${ODB_PLATFORM}/include")
+
+set (ODB_INSTALL_HOST_BINDIR "hosttools/bin")
 
 if (ODB_TESTS)
     set (INSTALL_GTEST OFF CACHE BOOL "" FORCE)
