Working on function calls

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -200,6 +200,7 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/semantic/loop_exit.c"
     "src/semantic/loop_for.c"
     "src/semantic/loop_name.c"
+    "src/semantic/post.c"
     "src/semantic/resolve_cmd_overloads.c"
     "src/semantic/semantic.c"
     "src/semantic/symbol_table.c"
